<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AroundMe</string>
    
    <string name="map_type_button_description">Toggle Map Type</string>
    
    <string name="landmark">Landmark</string>
    <string name="event">Event</string>
    
    <string name="list_landmarks">Landmarks List</string>
    <string name="list_events">Landmarks List</string>
    
    <string name="menu_refresh">Landmarks refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    
    <string name="on_click_snap_users_position">onClickSnapUsersPositionButton</string>
    <string name="on_click_map_type_button">onClickMapTypeButton</string>
    
   	<string name="title_activity_settings">Settings</string>
   	<string name="prefs_category_general">General Settings</string>
   	<string name="prefs_radius_title">Radius</string>
   	<string name="prefs_radius_summary">Search Radius</string>
   	<string name="prefs_radius_value">radius</string>
   	<string name="prefs_radius_units">meters</string>
   	<string name="prefs_radius_checkbox_key">radius_checkbox_key</string>
   	<string name="prefs_radius_checkbox_title">Radius circle</string>
   	<string name="prefs_radius_checkbox_summary">Draw radius on map</string>
   	
   	<string name="prefs_category_about">About</string>
   

</resources>