<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:key="preference_screen" >

    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/prefs_category_general" >
        
        <pt.up.fe.aroundme.activities.SeekBarPreference
            android:key="@string/prefs_radius_value"
            android:defaultValue="@integer/radius_default"
            android:max="50"
            android:summary="@string/prefs_radius_summary"
            android:title="@string/prefs_radius_title"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight=" km" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_key_about"
        android:title="@string/prefs_category_about" >
    </PreferenceCategory>

</PreferenceScreen>